# ignis-rt

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json.example  README.md  comp.spv  compile_shaders.bat  debug_mapping.py  debug_material.py  debug_particles.py  debug_uvs.py  debug_world.py  deploy.config.example  deploy_blender.ps1  mkdocs.yml  package_addon.ps1
.github/workflows/: build-addon.yml  deploy-docs.yml
blender/ignis_rt/: __init__.py  blender_manifest.toml  blender_rng.py  dll_wrapper.py  engine.py  loading_screen.py  perf_overlay.py  scene_export.py
docs/: index.md
docs/architecture/: node-vm.md  overview.md  pipeline.md
docs/features/: dlss.md  lighting.md  materials.md  volumetrics.md
docs/getting-started/: configuration.md  installation.md
docs/javascripts/: contrast.js  mermaid-config.js
docs/stylesheets/: extra.css
icons/: palette.json
include/: NRDIntegration.h  NRDIntegration.hpp  bvh_builder.h  cluster_structures.h  dlss_ngx.h  ignis_api.h  ignis_config.h  ignis_log.h  ignis_texture.h  light_tree.h  nrd_vulkan_backend.h  nrd_vulkan_integration.h  sky_nishita.h  sl_frame_gen.h  vk_check.h
shaders/: Filmic_Base_sRGB.cube  Runtime_LUT.cube  basic.frag  basic.vert  closesthit.rchit  cluster_culling.comp  common.glsl  eevee_bxdf.glsl  exposure_resolve.comp  gbuffer.frag  gbuffer.vert  gbuffer_hybrid.frag  gbuffer_hybrid.frag.spv  gbuffer_hybrid.vert  gbuffer_hybrid.vert.spv  hair_contour.comp  hair_generate.comp  hybrid.rgen  material_eval.glsl  miss.rmiss  nirc_inference.comp  nirc_inference.comp.spv  nirc_train.comp  nirc_train.comp.spv  nrd_composite.comp  nrd_composite.comp.spv  raygen.rgen  raygen_blender.rgen  raygen_blender.rgen.spv  sharc.glsl  sharc_resolve.comp  surfel_resolve.comp  surfel_resolve.comp.spv  tonemap.comp  tonemap.comp.spv
shaders/include/: common.glsl  di_reservoir.glsl  emissive_sampling.glsl  gi_reservoir.glsl  hair_bsdf.glsl  hair_cylinder.glsl  hair_intersect.glsl  light_tree.glsl  nirc_hash_grid.glsl  nirc_mlp.glsl  node_vm.glsl  noise.glsl  nrc.glsl  nrd_encode.glsl  pathstate.glsl  pbr_brdf.glsl  pt_reservoir.glsl  sampling.glsl  sharc_setup.glsl  sky.glsl  stable_planes.glsl  surfel_gi.glsl  tonemap.glsl  volume_march.glsl
shaders/wavefront/: wf_accumulate.comp  wf_accumulate.comp.spv  wf_camera_rays.comp  wf_camera_rays.comp.spv  wf_compact.comp  wf_compact.comp.spv  wf_intersect.comp  wf_intersect.comp.spv  wf_output.comp  wf_output.comp.spv  wf_pt_final.comp  wf_pt_spatial.comp  wf_pt_temporal.comp  wf_shade.comp  wf_shade.comp.spv  wf_shade.rgen  wf_shadow.comp  wf_shadow.comp.spv  wf_shadow_accumulate.comp  wf_shadow_accumulate.comp.spv  wf_sort_count.comp  wf_sort_prefix.comp  wf_sort_scatter.comp  wf_stable_planes.comp  wf_structs.glsl
src/: bvh_builder.cpp  dlss_ngx.cpp  dlss_stub.cpp  ignis_api.cpp  ignis_log.cpp  imgui_stub.cpp  light_tree.cpp  nrd_stub.cpp  nrd_vulkan_integration.cpp  sky_nishita.cpp  sl_frame_gen.cpp  sl_frame_gen_stub.cpp
src/vk/: nirc_integration.cpp  nirc_integration.h  nrc_integration.cpp  nrc_integration.h  vk_accel_structure.cpp  vk_accel_structure.h  vk_api_stubs.cpp  vk_context.cpp  vk_context.h  vk_external_window.cpp  vk_external_window.h  vk_geometry.cpp  vk_geometry.h  vk_interop.cpp  vk_interop.h  vk_pipeline.cpp  vk_pipeline.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_renderer.cpp  vk_renderer.h  vk_rt_pipeline.cpp  vk_rt_pipeline.h  vk_texture_manager.cpp  vk_texture_manager.h  vk_types.h  vk_wavefront_pipeline.cpp  vk_wavefront_pipeline.h
tests/: test_triangle.cpp
